[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1.8.4"
lazy_static = "1.4.0"
rand = "0.8.5"
ipnetwork = "0.20.0"